crates/hird-parse/tests/snapshots/smoke__reply_expr.snap
---
source: crates/hird-parse/tests/smoke.rs
expression: "render_cst(\"fn go(r: ReplyTo<Int>) = reply(r, 42)\")"
---
SOURCE_FILE
  FN_DECL
    FN_KW "fn"
    WHITESPACE " "
    IDENT "go"
    L_PAREN "("
    PARAM_LIST
      PARAM
        IDENT "r"
        COLON ":"
        APP_TYPE
          WHITESPACE " "
          IDENT "ReplyTo"
          TYPE_ARGS
            LT "<"
            IDENT "Int"
            GT ">"
    R_PAREN ")"
    WHITESPACE " "
    EQ "="
    REPLY_EXPR
      WHITESPACE " "
      REPLY_KW "reply"
      L_PAREN "("
      IDENT "r"
      COMMA ","
      WHITESPACE " "
      INT "42"
      R_PAREN ")"
