crates/hird-parse/tests/snapshots/smoke__self_expr.snap
---
source: crates/hird-parse/tests/smoke.rs
expression: "render_cst(\"fn go() = self()\")"
---
SOURCE_FILE
  FN_DECL
    FN_KW "fn"
    WHITESPACE " "
    IDENT "go"
    L_PAREN "("
    R_PAREN ")"
    WHITESPACE " "
    EQ "="
    SELF_EXPR
      WHITESPACE " "
      SELF_KW "self"
      L_PAREN "("
      R_PAREN ")"
